# trident

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-osmodifier.azl3  Dockerfile.azl2  Dockerfile.azl3  Dockerfile.full  Dockerfile.runtime  GETTING_STARTED.md  Makefile  README.md  SUPPORT.md  acl-selinux-report.md  atomic_write.patch  build.rs  containerlogs.txt  deny.toml  mic-baremetal-to-qemu-guest.yaml  netlisten.yaml  out.txt  regularlogs.txt  trident-selinuxpolicies.cil  trident.service  trident.spec
base/: trident
crates/docbuilder/: Cargo.toml
crates/docbuilder/src/: generate_specs.rs  main.rs  util.rs
crates/docbuilder/src/clap_model/: arg.rs  command.rs  mod.rs
crates/docbuilder/src/host_config/: docs.rs  mod.rs  schema.rs
crates/docbuilder/src/markdown/: table.rs
crates/docbuilder/src/schema_renderer/: docusaurus.rs  mod.rs  node.rs  renderer.rs  tera_context.rs  tera_extensions.rs
crates/docbuilder/src/setsail/: docbuilder.rs  mod.rs
crates/docbuilder/src/trident_arch/: render.rs
crates/docbuilder/src/trident_cli/: mod.rs
crates/harpoon/: Cargo.toml  build.rs
crates/harpoon/src/: id.rs  lib.rs
crates/harpoon/src/omaha/: mod.rs  status.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/launcher/src/omaha/: request.rs  response.rs  xml.rs
crates/osmodifier/: Cargo.toml  README.md
crates/osmodifier/src/: config.rs  constants.rs  default_grub.rs  grub_cfg.rs  hostname.rs  lib.rs  modules.rs  selinux.rs  services.rs  users.rs
crates/osutils/: Cargo.toml
crates/osutils/src/: blkid.rs  block_devices.rs  bootloaders.rs  chroot.rs  container.rs  dependencies.rs  df.rs  e2fsck.rs  efibootmgr.rs  efivar.rs  encryption.rs  files.rs  findmnt.rs  grub.rs  grub_defaults.rs  installation_media.rs  lib.rs  lsblk.rs  mdadm.rs  mkfs.rs  mkinitrd.rs  netplan.rs  osmodifier.rs  osrelease.rs  pcrlock.rs  repart.rs  resize2fs.rs  sfdisk.rs  special_release.rs  swap.rs  tabfile.rs  tune2fs.rs  udevadm.rs  uki.rs  uname.rs  verity_roothash.rs  wipefs.rs
crates/osutils/src/test_files/: findmnt-null-source.json
crates/osutils/src/testutils/: osrelease.rs  raid.rs  repart.rs  verity.rs
crates/pytest/: Cargo.toml
crates/pytest/src/: lib.rs
crates/pytest_gen/: Cargo.toml
crates/pytest_gen/src/: lib.rs
crates/sysdefs/: Cargo.toml
crates/sysdefs/src/: acl.rs  arch.rs  filesystems.rs  lib.rs  osuuid.rs  partition_types.rs  tpm2.rs
crates/trident/: Cargo.toml  build.rs
crates/trident-proto/: Cargo.toml  build.rs
crates/trident-proto/src/: lib.rs  logging.rs
crates/trident/assets/: special_v1.0.0.yaml
crates/trident/src/: agentconfig.rs  cli.rs  datastore.rs  diagnostics.rs  grpc.rs  lib.rs  main.rs  monitor_metrics.rs  reboot.rs  stream.rs  validation.rs
crates/trident/src/cli/: client.rs  grpc_client.rs  mod.rs
crates/trident/src/client/: client.rs  mod.rs  tridentclient.rs
crates/trident/src/engine/: ab_update.rs  acl.rs  bootentries.rs  clean_install.rs  etc_overlay.rs  install_index.rs  manual_rollback.rs  mod.rs  newroot.rs  provisioning_network.rs  rollback.rs  runtime_update.rs  update.rs
crates/trident_api/: Cargo.toml
crates/trident_api/schemas/: host-config-schema.json
crates/trident_api/src/: constants.rs  error.rs  lib.rs  misc.rs  schema.rs  status.rs
crates/trident_cli/: Cargo.toml  build.rs  main.rs
crates/trident_cli/examples/: client_usage.rs
crates/trident_cli/src/: cli.rs  client.rs  lib.rs  main.rs
crates/trident_cli/tests/: integration_tests.rs
crates/trident_proto/: Cargo.toml  build.rs
crates/trident_proto/src/: lib.rs
docbuilder/: Cargo.toml
docbuilder/src/: host_config.rs  main.rs
docbuilder/src/host_config/: docs.rs  samples.rs  schema.rs
docbuilder/src/markdown/: table.rs
docbuilder/src/schema_renderer/: characteristics.rs  mod.rs  node.rs  renderer.rs  tera_extensions.rs
docbuilder/src/setsail/: mod.rs
docbuilder/src/trident_arch/: mod.rs  nodes.rs  render.rs
docbuilder/src/trident_cli/: mod.rs
harpoon/: Cargo.toml
harpoon/src/: error.rs  lib.rs
harpoon/src/omaha/: app.rs  event.rs  mod.rs  request.rs  status.rs
osutils/: Cargo.toml
osutils/src/: arch.rs  blkid.rs  block_devices.rs  bootloaders.rs  chroot.rs  container.rs  dependencies.rs  e2fsck.rs  efibootmgr.rs  efivar.rs  encryption.rs  errors.rs  exe.rs  files.rs  filesystems.rs  findmnt.rs  grub.rs  grub_mkconfig.rs  hashing_reader.rs  hostname.rs  image_streamer.rs  installation_media.rs  lib.rs  lsblk.rs  lsof.rs  machine_id.rs  mdadm.rs  mkfs.rs  mkinitrd.rs  mkswap.rs  mount.rs  mountpoint.rs  netplan.rs  osmodifier.rs  osrelease.rs  osuuid.rs  overlay.rs  partition_types.rs  path.rs  pcr.rs  (+14 more)
osutils/src/test_files/: findmnt-null-source.json  findmnt.json  grub.cfg.template
osutils/src/testutils/: image.rs  mod.rs  osrelease.rs  repart.rs  tmp_mount.rs  verity.rs
pytest/: Cargo.toml
pytest/src/: lib.rs
pytest_gen/: Cargo.toml
pytest_gen/src/: lib.rs
setsail/: Cargo.toml  DEV_GUIDE.md
setsail/src/: data.rs  errors.rs  genhelp.rs  handlers.rs  lib.rs  load.rs  makedocs.rs  parser.rs  preprocess.rs  translator.rs  types.rs
setsail/src/commands/: bootloader.rs  liveimg.rs  misc.rs  mod.rs  network.rs  partition.rs  rootpw.rs  services.rs  template.rs  timezone.rs  user.rs
setsail/src/docbuilder/: mod.rs  model.rs
setsail/src/sections/: mod.rs  script.rs  unsupported.rs
setsail/src/translator/: misc.rs  mod.rs  network.rs  partitions.rs  scripts.rs  users.rs
sysdefs/: Cargo.toml
sysdefs/src/: arch.rs  filesystems.rs  tpm2.rs
trident_api/: Cargo.toml
trident_api/docs/: sample-host-configuration.yaml  trident-api-schema.json  trident-api.md
trident_api/docs/html/: trident-api.html
trident_api/schemas/: host-config-schema.json
trident_api/src/: config.rs  constants.rs  error.rs  lib.rs  misc.rs  serde.rs  status.rs
trident_api/src/config/: local.rs  mod.rs  trident.rs
trident_api/src/primitives/: bytes.rs  hash.rs  mod.rs  shortcuts.rs  version.rs
trident_api/src/samples/: mod.rs  sample_hc.rs
(+2135 files in other folders)
