[workspace]
resolver = "2"
default-members = ["crates/trident"]

members = [
    "crates/trident",
    "crates/trident_cli",
    "crates/trident_api",
    "crates/osutils",
    "crates/docbuilder",
    "crates/pytest",
    "crates/pytest_gen",
    "crates/sysdefs",
    "crates/harpoon",
]

[workspace.dependencies]
anyhow = {version = "1.0.94", features = ["backtrace"]}
bitflags = {version = "2.6.0", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
clap = {version = "4.4.18", features = ["derive", "wrap_help"]}
configparser = {version = "3.1.0", features = ["indexmap"]}
const_format = "0.2.33"
derive_more = "0.99.19"
docker_credential = "1.0.1"
documented = "0.6.0"
duct = "0.13.7"
enumflags2 = {version = "0.7", features = ["serde"]}
env_logger = "0.11.5"
glob = "0.3.1"
goblin = "0.10.0"
hex = "0.4.0"
hostname = "0.4.0"
indoc = "2.0.5"
inventory = "0.3.15"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.167"
log = "0.4.22"
maplit = "1.0.2"
netplan-types = "0.5.0"
nix = {version = "0.29.0", features = ["fs", "user"], default-features = false}
oci-client = "0.15.0"
once_cell = "1.19"
openssl = "0.10.72"
petgraph = "0.6.5"
pretty_env_logger = "0.5.0"
proc-macro2 = "1.0.92"
procfs = "0.17.0"
prost = "0.14.1"
prost-types = "0.14.1"
quote = "1.0.37"
rand = "0.9.0"
rayon = "1.10"
regex = "1.11.1"
reqwest = {version = "0.12.9", features = ["blocking", "charset", "default-tls"], default-features = false}
schemars = {version = "0.8.21", features = ["url", "uuid1"]}
semver = "1.0.23"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlite = "0.36.1"
strum = "0.26.3"
strum_macros = "0.26.4"
svg = "0.18.0"
syn = {version = "2.0.90", features = ["full"]}
sys-mount = {version = "3.0.1", default-features = false}
sysinfo = "0.30.13"
systemd-journal-logger = "2.2.2"
tar = "0.4.43"
tempfile = "3.14.0"
tera = "1.20.0"
textwrap = "0.16.2"
thiserror = "1.0.69"
tokio = {version = "1.47.1", features = ["full", "rt-multi-thread"]}
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["json"]}
url = {version = "2.5.4", features = ["serde"]}
uuid = {version = "1.11.0", features = ["serde", "v4"]}
which = "6.0.3"
zstd = "0.13.3"
mockito = "1.6.1"
tonic-prost-build = "0.14.2"
