[package]
name = "docbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.3.23", features = ["derive", "wrap_help"] }
indoc = "2"
itertools = { version = "0.11.0" }
log = "0.4.20"
maplit = "1.0.2"
pretty_env_logger = "0.5.0"
regex = "1.9.5"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
strum = "0.25.0"
tera = { version = "1.19.1" }


setsail = { path = "../setsail" }
trident_api = { path = "../trident_api", features = ["documentation"] }
osutils = { path = "../osutils" }

[features]
dangerous-options = ["trident_api/dangerous-options"]
