[package]
name = "docbuilder"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.4.0", features = ["derive", "wrap_help"] }
documented = "0.6.0"
indoc = "2"
itertools = "0.13.0"
log = "0.4.21"
maplit = "1.0.2"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
strum = "0.26.2"
tera = { version = "1.19.1" }


setsail = { path = "../setsail" }
trident_api = { path = "../trident_api", features = ["documentation"] }
osutils = { path = "../osutils" }

[features]
dangerous-options = ["trident_api/dangerous-options"]
