[package]
name = "osutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
configparser = { version = "3.0.2", features = ["indexmap"] }
duct = "0.13.6"
indoc = "2.0.3"
inventory = "0.3.14"
log = "0.4.20"
nix = { version = "0.26.2", default-features = false, features = ["fs"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
sys-mount = "2.1.0"
tempfile = "3.8.0"
trident_api = { path = "../trident_api" }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
which = "4.4.2"
regex = "1.10.2"

pytest_gen = { path = "../pytest_gen" }
pytest = { path = "../pytest" }

[dev-dependencies]
indoc = "2"
strum = "0.25.0"
strum_macros = "0.25.0"

[features]
functional-test = []
pytest-generator = []
