[package]
name = "osutils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
configparser = { version = "3.0.4", features = ["indexmap"] }
const_format = "0.2.32"
duct = "0.13.7"
indoc = "2.0.5"
inventory = "0.3.15"
log = "0.4.21"
nix = { version = "0.28.0", default-features = false, features = ["fs"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
sys-mount = "3.0.1"
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
which = "6.0.1"
regex = "1.10.4"
zstd = "0.13.1"

pytest_gen = { path = "../pytest_gen" }
pytest = { path = "../pytest", optional = true }
trident_api = { path = "../trident_api" }

[dev-dependencies]
glob = "0.3.1"
indoc = "2"
strum = "0.26.2"
strum_macros = "0.26.2"

[features]
functional-test = ["pytest", "test-utilities"]
pytest-generator = ["pytest"]
test-utilities = []
