[package]
name = "osutils"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
const_format = "0.2.33"
duct = "0.13.7"
enumflags2 = { version = "0.7", features = ["serde"] }
goblin = "0.10.0"
hex = "0.4.0"
hostname = "0.4.0"
indoc = "2.0.5"
inventory = "0.3.15"
log = "0.4.22"
netplan-types = "0.5.0"
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
once_cell = "1.19"
openssl = "0.10.72"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
strum = "0.26.3"
strum_macros = "0.26.4"
sys-mount = { version = "3.0.1", default-features = false }
tempfile = "3.14.0"
thiserror = "1.0.69"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
which = "6.0.3"
regex = "1.11.1"
zstd = "0.13.2"

rand = { version = "0.9.0", optional = true }

pytest_gen = { path = "../pytest_gen" }
pytest = { path = "../pytest", optional = true }
trident_api = { path = "../trident_api" }
sysdefs = { path = "../sysdefs" }

[dev-dependencies]
glob = "0.3.1"
indoc = "2"
rand = "0.9.0"

[features]
functional-test = ["pytest", "test-utilities"]
pytest-generator = ["pytest"]
test-utilities = ["rand"]
