[package]
name = "pytest"
version = "0.1.0"
edition = "2021"

[lib]
name = "pytest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.3"
inventory = "0.3.14"
itertools = "0.12.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
