[package]
name = "pytest_gen"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pytest_gen"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
indoc = "2.0.5"
inventory = "0.3.15"

pytest = { path = "../pytest" }
