[package]
name = "pytest_gen"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pytest_gen"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.5"
inventory = "0.3.15"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }

pytest = { path = "../pytest" }
