[package]
name = "setsail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.4.0", features = ["derive", "wrap_help"] }
log = "0.4.21"
netplan-types = "0.5.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
shellwords = "1.1.0"

osutils = { path = "../osutils" }
trident_api = { path = "../trident_api" }

[dev-dependencies]
indoc = "2"
tempfile = "3.10.1"
