[package]
name = "sysdefs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
enumflags2 = { version = "0.7", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
schemars = { version = "0.8", optional = true }

[features]
schemars = ["dep:schemars"]


[dev-dependencies]
serde_json = "1.0"
