[package]
name = "trident_api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
bitflags = { version = "2.5.0", features = ["serde"] }
const_format = "0.2.32"
lazy_static = "1.4.0"
log = "0.4.21"
netplan-types = "0.5.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
regex = "1.10.4"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.59"
url = { version = "2.5.0", features = ["serde"] }

# Optional dependencies
documented = { version = "0.6.0", optional = true }
schemars = { version = "0.8.17", optional = true, features = ["url", "uuid1"] }
serde_json = { version = "1.0.116", optional = true }
indoc = { version = "2.0.5", optional = true }

[dev-dependencies]
indoc = "2.0.5"
maplit = "1.0.2"

[features]
# Enables sysupdate-specific configurations
sysupdate = []

# Enables dangerous options such as plaintext passwords
dangerous-options = []

# Enables the samples module to produce API samples
samples = []

# Enables the schemars to produce JSON Schema
schema = ["schemars", "serde_json", "indoc"]

# Enables all required features for building docs
documentation = ["schema", "samples", "documented"]
