[package]
name = "trident_api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
bitflags = { version = "2.6.0", features = ["serde"] }
const_format = "0.2.33"
lazy_static = "1.5.0"
log = "0.4.22"
maplit = "1.0.2"
netplan-types = "0.5.0"
petgraph = "0.6.5"
regex = "1.11.1"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.69"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Optional dependencies
documented = { version = "0.6.0", optional = true }
indoc = { version = "2.0.5", optional = true }
schemars = { version = "0.8.21", optional = true, features = ["url", "uuid1"] }
serde_json = { version = "1.0.133", optional = true }

sysdefs = { path = "../sysdefs" }

[dev-dependencies]
indoc = "2.0.5"
maplit = "1.0.2"

[features]
# Enables sysupdate-specific configurations
sysupdate = []

# Enables dangerous options such as plaintext passwords
dangerous-options = []

# Enables the samples module to produce API samples
samples = []

# Enables the schemars to produce JSON Schema
schema = ["schemars", "serde_json", "indoc", "sysdefs/schemars"]

# Enables all required features for building docs
documentation = ["schema", "samples", "documented"]

# Enables taking in kickstart
setsail = []
