[package]
name = "docbuilder"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
documented = "0.6.0"
indoc = "2"
itertools = "0.13.0"
log = "0.4.22"
maplit = "1.0.2"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
strum = "0.26.3"
svg = "0.18.0"
tera = { version = "1.20.0" }
textwrap = "0.16.2"


trident = { path = "../trident" }
trident_api = { path = "../trident_api", features = ["documentation"] }
osutils = { path = "../osutils" }

[features]
dangerous-options = ["trident_api/dangerous-options"]
