[package]
name = "docbuilder"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true}
documented = {workspace = true}
indoc = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
maplit = {workspace = true}
pretty_env_logger = {workspace = true}
regex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
strum = {workspace = true}
svg = {workspace = true}
tera = {workspace = true}
textwrap = {workspace = true}


trident = { path = "../trident" }
trident_api = { path = "../trident_api", features = ["documentation"] }
osutils = { path = "../osutils" }

[features]
dangerous-options = ["trident_api/dangerous-options"]
