[package]
name = "harpoon"
version.workspace = true
edition = "2024"
license = "MIT"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }


[features]
grpc-preview = []
