[package]
name = "osmodifier"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "OS modifier library - applies OS configuration changes (users, hostname, services, modules, boot config, SELinux)"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }

trident_api = { path = "../trident_api" }

[dev-dependencies]
indoc = { workspace = true }
