[package]
name = "pytest"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "pytest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = {workspace = true}
inventory = {workspace = true}
itertools = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
