[package]
name = "pytest"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "pytest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.5"
inventory = "0.3.15"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
