[package]
name = "pytest_gen"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "pytest_gen"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = {workspace = true}
inventory = {workspace = true}
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}

pytest = { path = "../pytest" }
