[package]
name = "sysdefs"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = {workspace = true}
enumflags2 = {workspace = true}
serde = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
uuid = {workspace = true}
schemars = {workspace = true, optional = true}

[features]
schemars = ["dep:schemars"]


[dev-dependencies]
serde_json = {workspace = true}
