[package]
name = "trident-proto"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
log = { workspace = true, optional = true }
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing = { workspace = true, optional = true }

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
log.workspace = true
tracing.workspace = true

[features]
log = ["dep:log"]
tracing = ["dep:tracing"]
server = []
grpc-preview = []
