[package]
name = "trident"
version = "0.21.0"
edition = "2024"
publish = false
rust-version = "1.85.0"
license = "MIT"


[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
const_format = "0.2.33"
derive_more = "0.99.19"
docker_credential = { version = "1.0.1", optional = true }
duct = "0.13.7"
enumflags2 = { version = "0.7", features = ["serde"] }
env_logger = "0.11.5"
glob = "0.3.1"
lazy_static = "1.5.0"
libc = "0.2.167"
log = "0.4.22"
maplit = "1.0.2"
netplan-types = "0.5.0"
nix = { version = "0.29.0", default-features = false, features = [
    "fs",
    "user",
] }
oci-client = "0.15.0"
procfs = "0.17.0"
rayon = "1.10"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "default-tls",
    "charset",
] } # "http2" is enabled by default but causes a (false positive) CG alert
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlite = "0.36.1"
strum = "0.26.3"
strum_macros = "0.26.4"
sys-mount = { version = "3.0.1", default-features = false } # Disable loop device feature
sysinfo = "0.30.13"
systemd-journal-logger = "2.2.2"
tar = "0.4.43"
tempfile = "3.14.0"
tera = "1.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
zstd = "0.13.3"

sysdefs = { path = "../sysdefs" }
osutils = { path = "../osutils" }
trident_api = { path = "../trident_api" }

# gRPC API Dependencies
hyper = "1.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.16"
tonic = "0.14.2"
tonic-middleware = "0.4.0"
tonic-prost = "0.14.2"
tower = "0.5.2"

# Optional dependencies used by functional tests
indoc = { version = "2.0.5", optional = true }
inventory = { version = "0.3.15", optional = true }
pytest_gen = { path = "../pytest_gen", optional = true }

# Optional dependencies
pytest = { path = "../pytest", optional = true }

[build-dependencies]
tonic-build = { version = "0.12.3", optional = true }
osutils = { path = "../osutils" }

[dev-dependencies]
indoc = "2"
maplit = "1.0.2"
mockito = "1.6.1"
osutils = { path = "../osutils", features = ["test-utilities"] }
sha2 = "0.10.8"


[features]
dangerous-options = ["trident_api/dangerous-options", "docker_credential"]
sysupdate = ["trident_api/sysupdate"]
functional-test = [
    "pytest",
    "pytest_gen",
    "osutils/functional-test",
    "indoc",
    "inventory",
]
pytest-generator = ["pytest", "osutils/pytest-generator"]
