[package]
name = "trident"
version = "0.21.0"
edition = "2024"
publish = false
rust-version = "1.85.0"
license = "MIT"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
configparser = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
docker_credential = { workspace = true, optional = true }
duct = { workspace = true }
enumflags2 = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
netplan-types = { workspace = true }
nix = { workspace = true }
oci-client = { workspace = true }
procfs = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }                            # "http2" is enabled by default but causes a (false positive) CG alert
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlite = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sys-mount = { workspace = true }                          # Disable loop device feature
sysinfo = { workspace = true }
systemd-journal-logger = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

sysdefs = { path = "../sysdefs" }
osutils = { path = "../osutils" }
trident_api = { path = "../trident_api" }

# gRPC API Dependencies
tokio = { workspace = true, features = ["full"] }

# Optional dependencies used by functional tests
indoc = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
pytest_gen = { path = "../pytest_gen", optional = true }

# Optional dependencies
pytest = { path = "../pytest", optional = true }

[build-dependencies]
osutils = { path = "../osutils" }

[dev-dependencies]
indoc = { workspace = true }
maplit = { workspace = true }
mockito = { workspace = true }
osutils = { path = "../osutils", features = ["test-utilities"] }
sha2 = { workspace = true }


[features]
dangerous-options = ["trident_api/dangerous-options", "docker_credential"]
sysupdate = ["trident_api/sysupdate"]
functional-test = [
    "pytest",
    "pytest_gen",
    "osutils/functional-test",
    "indoc",
    "inventory",
]
pytest-generator = ["pytest", "osutils/pytest-generator"]
