[package]
name = "trident_api"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = {workspace = true}
bitflags = {workspace = true}
const_format = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
maplit = {workspace = true}
netplan-types = {workspace = true}
petgraph = {workspace = true}
regex = {workspace = true}
semver = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}

# Optional dependencies
documented = {workspace = true, optional = true}
indoc = {workspace = true, optional = true}
schemars = {workspace = true, optional = true}
serde_json = {workspace = true, optional = true}

sysdefs = { path = "../sysdefs" }

[dev-dependencies]
indoc = {workspace = true}
maplit = {workspace = true}

[features]
# Enables sysupdate-specific configurations
sysupdate = []

# Enables dangerous options such as plaintext passwords
dangerous-options = []

# Enables the samples module to produce API samples
samples = []

# Enables the schemars to produce JSON Schema
schema = ["schemars", "serde_json", "indoc", "sysdefs/schemars"]

# Enables all required features for building docs
documentation = ["schema", "samples", "documented"]

# Enables taking in kickstart
setsail = []
